changed h1 and links, added h2

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,17 @@
 {% block content %}
 
   <h1>
-    My buggy editor
+    Phoebe's Buggy Editor!
   </h1>
 
+<h2>
+    Welcome to the Buggy Editor
+</h2>
+
   <div class="spacer">
-    <a href="/new" class="button">Make buggy</a>
-    <a href="/buggy" class="button">Show buggy</a>
-    <a href="/json" class="button">Get buggy JSON</a>
+    <a href="/new" class="button">Make Your Buggy</a>
+    <a href="/buggy" class="button">Show Your Buggy</a>
+    <a href="/json" class="button">Get Your Buggy (JSON)</a>
   </div>
 
   <p>
