added style to h1 and h2: incl. text align, font and colour

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,4 +11,16 @@
 
     </div>
   </body>
+  <style>
+      h1{
+          text-align: center;
+          font-family: Rockwell, serif;
+          color: black;
+      }
+    h2{
+      text-align: center;
+      font-family: Rockwell, serif;
+      color: grey;
+    }
+  </style>
 </html>
