--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -4,13 +4,28 @@
 
 {% block content %}
 
-  <h1>Make buggy</h1>
+  <h1>Make Your Buggy</h1>
+
   <form action="/new" method="post">
-    <label for="qty_wheels">Number of wheels:</label>
-    <input type="text" name="qty_wheels" />
+    <p>
+    <label for="qty_wheels">Number of Wheels:</label>
+    <input type="text" name="qty_wheels" /p>
+    </p>
+    
+    <p>
+    <label for="flag_color">Colour of Flag:</label>
+    <input type="text" name="flag_color" />
+    </p>
+    
     <input type="submit" class="button">
   </form>
   <p>
-    <a href="/" class="button">home</a>
+    <a href="/" class="button">Home</a>
    </p>
+
+<style>
+    h1{
+        font-family: Rockwell, serif;
+    }
+</style>
 {% endblock %}
