added secondary flag colour and flag pattern to forms

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -9,12 +9,22 @@
   <form action="/new" method="post">
     <p>
     <label for="qty_wheels">Number of Wheels:</label>
-    <input type="text" name="qty_wheels" /p>
+    <input type="text" name="qty_wheels" />
     </p>
     
     <p>
     <label for="flag_color">Colour of Flag:</label>
     <input type="text" name="flag_color" />
+    </p>
+    
+    <p>
+    <label for="flag_color_secondary">Secondary Flag Colour:</label>
+    <input type="text" name="flag_color_secondary" />
+    </p>
+    
+    <p>
+    <label for="flag_pattern">Flag Pattern:</label>
+    <input type="text" name="flag_pattern" />
     </p>
     
     <input type="submit" class="button">
