added flag colour, secondary flag colour and flag pattern to table

--- a/templates/buggy.html
+++ b/templates/buggy.html
@@ -8,9 +8,23 @@
    <tr>
      <td>ID:</td> <td> {{ buggy['id'] }} </td>
     </tr>
+   
    <tr>
      <td>Wheels:</td> <td> {{ buggy['qty_wheels'] }} </td>
     </tr>
+   
+   <tr>
+       <td>Flag Colour:</td> <td> {{buggy['flag_color']}} </td>
+    </tr>
+   
+   <tr>
+       <td>Secondary Flag Colour:</td> <td> {{['flag_color_secondary']}} </td>
+    </tr>
+   
+   <tr>\
+       <td>Flag Pattern:</td> <td> {{['flag_pattern']}} </td>
+    </tr>
+   
   </table>
 
   <p>
