fonts and text colour changed

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,5 +22,13 @@
       font-family: Rockwell, serif;
       color: grey;
     }
+  
+  a{
+      font-family: Rockwell, serif;
+  }
+  
+  p{
+      font-family: Rockwell, serif;
+  }
   </style>
 </html>
