tableupdated --> mistake fixed with flag_color_secondary and flag_patter (buggy was missing but issue has been solved)

--- a/templates/buggy.html
+++ b/templates/buggy.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-  <h1>Buggy</h1>
+  <h1>Your Buggy</h1>
 
   <table>
    <tr>
@@ -18,11 +18,11 @@
     </tr>
    
    <tr>
-       <td>Secondary Flag Colour:</td> <td> {{['flag_color_secondary']}} </td>
+       <td>Secondary Flag Colour:</td> <td> {{buggy['flag_color_secondary']}} </td>
     </tr>
    
-   <tr>\
-       <td>Flag Pattern:</td> <td> {{['flag_pattern']}} </td>
+   <tr>
+       <td>Flag Pattern:</td> <td> {{buggy['flag_pattern']}} </td>
     </tr>
    
   </table>
