power_type added to form

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -27,11 +27,17 @@
     <input type="text" name="flag_pattern" />
     </p>
     
+    <p>
+    <lable for="power_type">Power Type:</label>
+    <input type="text" name="flag_pattern" />
+    </p>
+    
     <input type="submit" class="button">
   </form>
   <p>
     <a href="/" class="button">Home</a>
    </p>
+
 
 <style>
     h1{
