--- a/templates/buggy.html
+++ b/templates/buggy.html
@@ -25,6 +25,9 @@
        <td>Flag Pattern:</td> <td> {{buggy['flag_pattern']}} </td>
     </tr>
    
+   <tr>
+       <td>Power Type:</td><td> {{buggy['power_type']}} </td>
+   
   </table>
 
   <p>
