power_units added to form

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -29,7 +29,12 @@
     
     <p>
     <lable for="power_type">Power Type:</label>
-    <input type="text" name="flag_pattern" />
+    <input type="text" name="power_type" />
+    </p>
+    
+    <p>
+    <lable for="power_units">Units of Power:</label>
+    <input type="text" name="power_units" />
     </p>
     
     <input type="submit" class="button">
