--- a/templates/buggy.html
+++ b/templates/buggy.html
@@ -27,6 +27,11 @@
    
    <tr>
        <td>Power Type:</td><td> {{buggy['power_type']}} </td>
+    </tr>
+   
+   <tr>
+      <td>Units of Power:</td><td> {{buggy['power_units']}} </td>
+   </tr>
    
   </table>
 
