--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -37,6 +37,11 @@
     <input type="text" name="power_units" />
     </p>
     
+    <p>
+    <lable for="aux_power_type">Auxiliary Power Type:</label>
+    <input type="text" name="aux_power_type" />
+    </p>
+    
     <input type="submit" class="button">
   </form>
   <p>
