aux_power_type added to table

--- a/templates/buggy.html
+++ b/templates/buggy.html
@@ -33,6 +33,10 @@
       <td>Units of Power:</td><td> {{buggy['power_units']}} </td>
    </tr>
    
+   <tr>
+      <td>Auxiliary Power Type:</td><td> {{buggy['aux_power_type']}} </td>
+   </tr>
+   
   </table>
 
   <p>
