--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -42,6 +42,11 @@
     <input type="text" name="aux_power_type" />
     </p>
     
+    <p>
+       <lable for="aux_power_units">Units of Auxiliary Power:</label>
+       <input type="text" name="aux_power_units" />
+    </p>
+    
     <input type="submit" class="button">
   </form>
   <p>
