--- a/templates/buggy.html
+++ b/templates/buggy.html
@@ -37,6 +37,10 @@
       <td>Auxiliary Power Type:</td><td> {{buggy['aux_power_type']}} </td>
    </tr>
    
+   <tr>
+      <td>Units of Auxiliary Power:</td><td> {{buggy['aux_power_units']}} </td>
+   </tr>
+   
   </table>
 
   <p>
