--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -47,6 +47,11 @@
        <input type="text" name="aux_power_units" />
     </p>
     
+    <p>
+       <lable for="hamster_booster">Hamster Booster:</label>
+       <input type="text" name="hamster_booster" />
+    </p>
+    
     <input type="submit" class="button">
   </form>
   <p>
