hamster_booster added to table

--- a/templates/buggy.html
+++ b/templates/buggy.html
@@ -41,6 +41,10 @@
       <td>Units of Auxiliary Power:</td><td> {{buggy['aux_power_units']}} </td>
    </tr>
    
+   <tr>
+      <td>Hamster Booster:</td><td> {{buggy['hamster_booster']}} </td>
+   </tr>
+   
   </table>
 
   <p>
