tyres added to form

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -52,6 +52,11 @@
        <input type="text" name="hamster_booster" />
     </p>
     
+    <p>
+       <lable for="tyres">Type of Tyres:</label>
+       <input type="text" name="tyres" />
+    </p>
+    
     <input type="submit" class="button">
   </form>
   <p>
