tyres added to table

--- a/templates/buggy.html
+++ b/templates/buggy.html
@@ -45,6 +45,10 @@
       <td>Hamster Booster:</td><td> {{buggy['hamster_booster']}} </td>
    </tr>
    
+   <tr>
+      <td>Type of Tyres:</td><td> {{buggy['tyres']}} </td>
+   </tr>
+   
   </table>
 
   <p>
