qty_tyres added to form

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -57,6 +57,11 @@
        <input type="text" name="tyres" />
     </p>
     
+    <p>
+          <lable for="qty_tyres">Number of Tyres:</label>
+          <input type="text" name="qty_tyres" />
+       </p>
+    
     <input type="submit" class="button">
   </form>
   <p>
