qty_tyres added to table

--- a/templates/buggy.html
+++ b/templates/buggy.html
@@ -49,6 +49,10 @@
       <td>Type of Tyres:</td><td> {{buggy['tyres']}} </td>
    </tr>
    
+   <tr>
+      <td>Number of Tyres:</td><td> {{buggy['qty_tyres']}} </td>
+   </tr>
+   
   </table>
 
   <p>
