armour added to form

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -58,9 +58,14 @@
     </p>
     
     <p>
-          <lable for="qty_tyres">Number of Tyres:</label>
-          <input type="text" name="qty_tyres" />
-       </p>
+        <lable for="qty_tyres">Number of Tyres:</label>
+        <input type="text" name="qty_tyres" />
+    </p>
+    
+    <p>
+        <lable for="armour">Armour:</label>
+        <input type="text" name="armour" />
+    </p>
     
     <input type="submit" class="button">
   </form>
