armour added to table

--- a/templates/buggy.html
+++ b/templates/buggy.html
@@ -53,6 +53,10 @@
       <td>Number of Tyres:</td><td> {{buggy['qty_tyres']}} </td>
    </tr>
    
+   <tr>
+      <td>Armour:</td><td> {{buggy['armour']}} </td>
+   </tr>
+   
   </table>
 
   <p>
