--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -67,6 +67,11 @@
         <input type="text" name="armour" />
     </p>
     
+    <p>
+        <lable for="fireproof">Fireproof?:</label>
+        <input type="text" name="fireproof" />
+    </p>
+    
     <input type="submit" class="button">
   </form>
   <p>
