--- a/templates/buggy.html
+++ b/templates/buggy.html
@@ -57,6 +57,10 @@
       <td>Armour:</td><td> {{buggy['armour']}} </td>
    </tr>
    
+   <tr>
+      <td>Fireproof?:</td><td> {{buggy['fireproof']}} </td>
+   </tr>
+   
   </table>
 
   <p>
