insulated added to form

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -72,6 +72,11 @@
         <input type="text" name="fireproof" />
     </p>
     
+    <p>
+        <lable for="insulated">Insulated?:</label>
+        <input type="text" name="insulated" />
+    </p>
+    
     <input type="submit" class="button">
   </form>
   <p>
