insulated added to table

--- a/templates/buggy.html
+++ b/templates/buggy.html
@@ -61,6 +61,10 @@
       <td>Fireproof?:</td><td> {{buggy['fireproof']}} </td>
    </tr>
    
+   <tr>
+      <td>Insulated?:</td><td> {{buggy['insulated']}} </td>
+   </tr>
+   
   </table>
 
   <p>
