antibiotic added to form

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -77,6 +77,11 @@
         <input type="text" name="insulated" />
     </p>
     
+    <p>
+        <lable for="antibiotic">Antibiotic?:</label>
+        <input type="text" name="antibiotic" />
+    </p>
+    
     <input type="submit" class="button">
   </form>
   <p>
