antibiotic added to table

--- a/templates/buggy.html
+++ b/templates/buggy.html
@@ -65,6 +65,10 @@
       <td>Insulated?:</td><td> {{buggy['insulated']}} </td>
    </tr>
    
+   <tr>
+      <td>Antibiotic?:</td><td> {{buggy['antibiotic']}} </td>
+   </tr>
+   
   </table>
 
   <p>
