attack added to form

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -82,6 +82,11 @@
         <input type="text" name="antibiotic" />
     </p>
     
+    <p>
+        <lable for="attack">Offensive Capability:</label>
+        <input type="text" name="attack" />
+    </p>
+    
     <input type="submit" class="button">
   </form>
   <p>
