attack added to table

--- a/templates/buggy.html
+++ b/templates/buggy.html
@@ -69,6 +69,10 @@
       <td>Antibiotic?:</td><td> {{buggy['antibiotic']}} </td>
    </tr>
    
+   <tr>
+      <td>Offensive Capability:</td><td> {{buggy['attack']}} </td>
+   </tr>
+   
   </table>
 
   <p>
