qty_attack added to form

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -87,8 +87,14 @@
         <input type="text" name="attack" />
     </p>
     
+    <p>
+        <lable for="qty_attack">Number of Attacks:</label>
+        <input type="text" name="qty_attack" />
+    </p>
+    
     <input type="submit" class="button">
   </form>
+
   <p>
     <a href="/" class="button">Home</a>
    </p>
