qty_attacks added to table

--- a/templates/buggy.html
+++ b/templates/buggy.html
@@ -73,6 +73,10 @@
       <td>Offensive Capability:</td><td> {{buggy['attack']}} </td>
    </tr>
    
+   <tr>
+      <td>Number of Attacks:</td><td> {{buggy['qty_attack']}} </td>
+   </tr>
+   
   </table>
 
   <p>
