banging added to form

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -92,6 +92,11 @@
         <input type="text" name="qty_attack" />
     </p>
     
+    <p>
+        <lable for="banging">Sound System?:</label>
+        <input type="text" name="banging" />
+    </p>
+    
     <input type="submit" class="button">
   </form>
 
