banging added to table

--- a/templates/buggy.html
+++ b/templates/buggy.html
@@ -74,7 +74,11 @@
    </tr>
    
    <tr>
-      <td>Number of Attacks:</td><td> {{buggy['qty_attack']}} </td>
+      <td>Number of Attacks:</td><td> {{buggy['qty_attacks']}} </td>
+   </tr>
+   
+   <tr>
+      <td>Sound System?:</td><td> {{buggy['banging']}} </td>
    </tr>
    
   </table>
