algo added to form

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -97,6 +97,11 @@
         <input type="text" name="banging" />
     </p>
     
+    <p>
+        <lable for="algo">Type of Algorithm:</label>
+        <input type="text" name="algo" />
+    </p>
+    
     <input type="submit" class="button">
   </form>
 
