algo added to table

--- a/templates/buggy.html
+++ b/templates/buggy.html
@@ -81,6 +81,10 @@
       <td>Sound System?:</td><td> {{buggy['banging']}} </td>
    </tr>
    
+   <tr>
+      <td>Type of Algorithm:</td><td> {{buggy['algo']}} </td>
+   </tr>
+   
   </table>
 
   <p>
