message displayed in Make Your Buggy form when qty_wheels is not an integer

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -6,6 +6,10 @@
 
   <h1>Make Your Buggy</h1>
 
+<p>
+  {{ msg }}
+</p>
+
   <form action="/new" method="post">
     <p>
     <label for="qty_wheels">Number of Wheels:</label>
@@ -88,8 +92,8 @@
     </p>
     
     <p>
-        <lable for="qty_attack">Number of Attacks:</label>
-        <input type="text" name="qty_attack" />
+        <lable for="qty_attacks">Number of Attacks:</label>
+        <input type="text" name="qty_attacks" />
     </p>
     
     <p>
