--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link href="static/app.css" media="screen, projector, print" rel="stylesheet" type="text/css" />
+    <link href="static/app.css?{{range(1,9999) | random}}" media="screen, projector, print" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div class="main-content">
