--- a/templates/base.html
+++ b/templates/base.html
@@ -10,25 +10,8 @@
       {% block content %}{% endblock %}
 
     </div>
+    
+    <div class="heart"></div>
+
   </body>
-  <style>
-      h1{
-          text-align: center;
-          font-family: Rockwell, serif;
-          color: black;
-      }
-    h2{
-      text-align: center;
-      font-family: Rockwell, serif;
-      color: grey;
-    }
-  
-  a{
-      font-family: Rockwell, serif;
-  }
-  
-  p{
-      font-family: Rockwell, serif;
-  }
-  </style>
 </html>
