set values in form for qty_wheels, power_units,  aux_power_units, hamster_booster, qty_tyres and qty_attacks

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -13,7 +13,7 @@
   <form action="/new" method="post">
     <p>
     <label for="qty_wheels">Number of Wheels:</label>
-    <input type="text" name="qty_wheels" />
+    <input type="text" name="qty_wheels" value="4"/>
     </p>
     
     <p>
@@ -38,7 +38,7 @@
     
     <p>
     <lable for="power_units">Units of Power:</label>
-    <input type="text" name="power_units" />
+    <input type="text" name="power_units" value="10"/>
     </p>
     
     <p>
@@ -48,22 +48,22 @@
     
     <p>
        <lable for="aux_power_units">Units of Auxiliary Power:</label>
-       <input type="text" name="aux_power_units" />
+       <input type="text" name="aux_power_units" value="10"/>
     </p>
     
     <p>
        <lable for="hamster_booster">Hamster Booster:</label>
-       <input type="text" name="hamster_booster" />
+       <input type="text" name="hamster_booster" value="5"/>
     </p>
     
     <p>
        <lable for="tyres">Type of Tyres:</label>
-       <input type="text" name="tyres" />
+           <input type="text" name="tyres" />
     </p>
     
     <p>
         <lable for="qty_tyres">Number of Tyres:</label>
-        <input type="text" name="qty_tyres" />
+        <input type="text" name="qty_tyres" value="5"/>
     </p>
     
     <p>
@@ -93,7 +93,7 @@
     
     <p>
         <lable for="qty_attacks">Number of Attacks:</label>
-        <input type="text" name="qty_attacks" />
+        <input type="text" name="qty_attacks" value="5"/>
     </p>
     
     <p>
