qty_wheels value added

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -13,7 +13,7 @@
   <form action="/new" method="post">
     <p>
     <label for="qty_wheels">Number of Wheels:</label>
-    <input type="text" name="qty_wheels" value="4"/>
+    <input type="text" name="qty_wheels" value="{{ buggy['qty_wheels'] }}"/>
     </p>
     
     <p>
