--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -38,7 +38,7 @@
     
     <p>
     <lable for="power_units">Units of Power:</label>
-    <input type="text" name="power_units" value="10"/>
+    <input type="text" name="power_units" value="{{buggy['power_units']}}"/>
     </p>
     
     <p>
