aux_power_units value added

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -48,7 +48,7 @@
     
     <p>
        <lable for="aux_power_units">Units of Auxiliary Power:</label>
-       <input type="text" name="aux_power_units" value="10"/>
+       <input type="text" name="aux_power_units" value="{{buggy['aux_power_units']}}"/>
     </p>
     
     <p>
