hamster_booster value added{

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -53,7 +53,7 @@
     
     <p>
        <lable for="hamster_booster">Hamster Booster:</label>
-       <input type="text" name="hamster_booster" value="5"/>
+       <input type="text" name="hamster_booster" value="{{buggy['hamster_booster']}}"/>
     </p>
     
     <p>
