qty_tyres value added

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -63,7 +63,7 @@
     
     <p>
         <lable for="qty_tyres">Number of Tyres:</label>
-        <input type="text" name="qty_tyres" value="5"/>
+        <input type="text" name="qty_tyres" value="{{buggy['qty_tyres']}}"/>
     </p>
     
     <p>
