qty_attacks value added

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -93,7 +93,7 @@
     
     <p>
         <lable for="qty_attacks">Number of Attacks:</label>
-        <input type="text" name="qty_attacks" value="5"/>
+        <input type="text" name="qty_attacks" value="{{buggy['qty_attacks']}}"/>
     </p>
     
     <p>
