flag_color value added

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -18,7 +18,7 @@
     
     <p>
     <label for="flag_color">Colour of Flag:</label>
-    <input type="text" name="flag_color" />
+    <input type="text" name="flag_color" value="{{buggy['flag_color']}}"/>
     </p>
     
     <p>
