flag_color_secondary value added

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -23,7 +23,7 @@
     
     <p>
     <label for="flag_color_secondary">Secondary Flag Colour:</label>
-    <input type="text" name="flag_color_secondary" />
+    <input type="text" name="flag_color_secondary" value="{{buggy['flag_color_secondary']}}"/>
     </p>
     
     <p>
