flag_pattern value added

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -28,7 +28,7 @@
     
     <p>
     <label for="flag_pattern">Flag Pattern:</label>
-    <input type="text" name="flag_pattern" />
+    <input type="text" name="flag_pattern" value="{{buggy['flag_pattern']}}"/>
     </p>
     
     <p>
