--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -33,7 +33,7 @@
     
     <p>
     <lable for="power_type">Power Type:</label>
-    <input type="text" name="power_type" />
+    <input type="text" name="power_type" value="{{buggy['power_type']}}"/>
     </p>
     
     <p>
