aux_power_type value added

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -43,7 +43,7 @@
     
     <p>
     <lable for="aux_power_type">Auxiliary Power Type:</label>
-    <input type="text" name="aux_power_type" />
+    <input type="text" name="aux_power_type" value="{{buggy['aux_power_type']}}"/>
     </p>
     
     <p>
