tyres value added

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -58,7 +58,7 @@
     
     <p>
        <lable for="tyres">Type of Tyres:</label>
-           <input type="text" name="tyres" />
+           <input type="text" name="tyres" value="{{buggy['tyres']}}"/>
     </p>
     
     <p>
