armour value added

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -68,7 +68,7 @@
     
     <p>
         <lable for="armour">Armour:</label>
-        <input type="text" name="armour" />
+        <input type="text" name="armour" value="{{buggy['armour']}}"/>
     </p>
     
     <p>
