fireproof value added

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -73,7 +73,7 @@
     
     <p>
         <lable for="fireproof">Fireproof?:</label>
-        <input type="text" name="fireproof" />
+        <input type="text" name="fireproof" value="{{buggy['fireproof']}}"/>
     </p>
     
     <p>
