insulated value added

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -78,7 +78,7 @@
     
     <p>
         <lable for="insulated">Insulated?:</label>
-        <input type="text" name="insulated" />
+        <input type="text" name="insulated" value="{{buggy['insulated']}}"/>
     </p>
     
     <p>
