antibiotic value added

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -83,7 +83,7 @@
     
     <p>
         <lable for="antibiotic">Antibiotic?:</label>
-        <input type="text" name="antibiotic" />
+        <input type="text" name="antibiotic" value="{{buggy['antibiotic']}}"/>
     </p>
     
     <p>
