attack value added

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -88,7 +88,7 @@
     
     <p>
         <lable for="attack">Offensive Capability:</label>
-        <input type="text" name="attack" />
+        <input type="text" name="attack" value="{{buggy['attack']}}"/>
     </p>
     
     <p>
