banging value added

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -98,7 +98,7 @@
     
     <p>
         <lable for="banging">Sound System?:</label>
-        <input type="text" name="banging" />
+        <input type="text" name="banging" value="{{buggy['banging']}}"/>
     </p>
     
     <p>
