algo value added

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -103,7 +103,7 @@
     
     <p>
         <lable for="algo">Type of Algorithm:</label>
-        <input type="text" name="algo" />
+        <input type="text" name="algo" value="{{buggy['algo']}}"/>
     </p>
     
     <input type="submit" class="button">
