aux_power_type made into a select form

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -65,7 +65,20 @@
     
     <p>
     <lable for="aux_power_type">Auxiliary Power Type:</label>
-    <input type="text" name="aux_power_type" value="{{buggy['aux_power_type']}}"/>
+    <select name="aux_power_type">
+        
+        <option>petrol</option>
+        <option>fusion</option>
+        <option>steam</option>
+        <option>bio</option>
+        <option>electric</option>
+        <option>rocket</option>
+        <option>hamster</option>
+        <option>thermonuclear</option>
+        <option>solar</option>
+        <option>wind</option>
+        
+    <select value="{{buggy['aux_power_type']}}"/>
     </p>
     
     <p>
