fireproof given yes/no select form

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -125,7 +125,12 @@
     
     <p>
         <lable for="fireproof">Fireproof?:</label>
-        <input type="text" name="fireproof" value="{{buggy['fireproof']}}"/>
+        <select name="fireproof">
+            
+            <option>Yes</option>
+            <option>No</option>
+            
+        <select value="{{buggy['fireproof']}}"/>
     </p>
     
     <p>
