insulated given yes/no select form

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -135,7 +135,12 @@
     
     <p>
         <lable for="insulated">Insulated?:</label>
-        <input type="text" name="insulated" value="{{buggy['insulated']}}"/>
+        <select name="insulated">
+            
+            <option>Yes</option>
+            <option>No</option>
+            
+        <select value="{{buggy['insulated']}}"/>
     </p>
     
     <p>
