antibiotic given yes/no select form

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -145,7 +145,12 @@
     
     <p>
         <lable for="antibiotic">Antibiotic?:</label>
-        <input type="text" name="antibiotic" value="{{buggy['antibiotic']}}"/>
+        <select name="antibiotic">
+            
+            <option>Yes</option>
+            <option>No</option>
+            
+        <select value="{{buggy['antibiotic']}}"/>
     </p>
     
     <p>
