banging given yes/no select form

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -173,7 +173,12 @@
     
     <p>
         <lable for="banging">Sound System?:</label>
-        <input type="text" name="banging" value="{{buggy['banging']}}"/>
+        <select name="banging">
+            
+            <option>Yes</option>
+            <option>No</option>g
+            
+        <select value="{{buggy['banging']}}"/>
     </p>
     
     <p>
