--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -183,7 +183,16 @@
     
     <p>
         <lable for="algo">Type of Algorithm:</label>
-        <input type="text" name="algo" value="{{buggy['algo']}}"/>
+        <select name="algo">
+            
+            <option>defensive</option>
+            <option>steady</option>
+            <option>offensive</option>
+            <option>titfortat</option>
+            <option>random</option>
+            <option>buggy</option>g
+            
+        <select value="{{buggy['algo']}}"/>
     </p>
     
     <input type="submit" class="button">
