--- a/static/app.css
+++ b/static/app.css
@@ -5,15 +5,15 @@ html{
 
 body {
   font-family: "Rockwell", serif;
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   font-size: 1.2em;
   color: #000000;
   background: repeating-linear-gradient(
     45deg,
-    hotpink,
+    #FDECEC,
     pink 2em,
-    hotpink 2em,
+    #FDECEC 2em,
     pink 4em
   );
 }
@@ -56,6 +56,11 @@ a.button, input.button {
   box-shadow: 5px 5px 5px #999999;
   font-family: Rockwell, serif;
   color: grey;
+}
+
+a.button {
+    margin: 245px;
+    padding: 10px;
 }
 
 a.button:hover {
