car marquees added

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,5 +28,17 @@
     will be disqualified from that race... so make sure you program your editor
     correctly.
   </p>
+    <div class="car1" style="position: relative; bottom: 10px">
+        <marquee behaviour="scroll" direction="right" scrollamount="15">
+            <img src="/static/pink-car.png" width="120" height="80" alt="Natural"/>
+        </marquee>
+    </div>
+
+<div class="car2" style="position: relative; bottom: 470px">
+    <marquee behaviour="scroll" direction="right" scrollamount="15">
+        <img src="/static/pink-car.png" width="120" height="80" alt="Natural"/>
+    </marquee>
+</div>
+
 
 {% endblock %}
