total_cost added to table

--- a/templates/buggy.html
+++ b/templates/buggy.html
@@ -85,6 +85,9 @@
       <td>Type of Algorithm:</td><td> {{buggy['algo']}} </td>
    </tr>
    
+   <tr>
+       <td>Total Cost:</td><td> {{buggy['total_cost']}} </td>
+   
   </table>
 
   <p>
