autofill for form added under script tags

--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -5,6 +5,7 @@
 {% block content %}
 
   <h1>Make Your Buggy</h1>
+
 <p>
 {{ msg }}
 </p>
@@ -201,6 +202,49 @@
     <a href="/" class="button">Home</a>
    </p>
 
+
+<script>
+    function autoFill() {
+        buggy-form.getElementById('qty_wheels').value = 4;
+        
+        buggy-form.getElementById('flag_color').value = "red";
+        
+        buggy-form.getElementById('flag_color_secondary').value = "blue";
+        
+        buggy-form.getElementById('flag_pattern').value - "vstripe";
+        
+        buggy-form.getElementById('power_type').value = "petrol";
+        
+        buggy-form.getElementById('power_units').value = 5;
+        
+        buggy-form.getElementById('aux_power_type').value = "petrol";
+        
+        buggy-form.getElementById('aux_power_units').value = 5;
+        
+        buggy-form.getElementById('hamster_booster').value = 1;
+        
+        buggy-form.getElementById('tyres').value = "knobbly";
+        
+        buggy-form.getElementById('qty_tyres').value = 5;
+        
+        buggy-form.getElementById('armour').value = "none";
+        
+        buggy-form.getElementById('fireproof').value = "No";
+        
+        buggy-form.getElementById('insulated').value = "No";
+        
+        buggy-form.getElementById('antibiotic').value = "No";
+        
+        buggy-form.getElementById('attack').value = "none";
+        
+        buggy-form.getElementById('qty_attacks').value = 0;
+        
+        buggy-form.getElementById('banging').value = "No";
+        
+        buggy-form.getElementById('algo').value = "buggy";
+    }
+
+</script>
 
 <style>
     h1{
