--- a/templates/buggy.html
+++ b/templates/buggy.html
@@ -4,6 +4,8 @@
 
   <h1>Your Buggy</h1>
 
+{% for buggy in buggies %}
+
   <table>
    <tr>
      <td>ID:</td> <td> {{ buggy['id'] }} </td>
@@ -89,6 +91,8 @@
        <td>Total Cost:</td><td> {{buggy['total_cost']}} </td>
    
   </table>
+
+{% endfor %}
 
   <p>
     <a href="/" class="button">home</a>
