Show Your Buggy changed to Show Your Buggies

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 
   <div class="spacer">
     <a href="/new" class="button">Make Your Buggy</a>
-    <a href="/buggy" class="button">Show Your Buggy</a>
+    <a href="/buggy" class="button">Show Your Buggies</a>
     <a href="/json" class="button">Get Your Buggy (JSON)</a>
   </div>
 
