--- a/templates/buggy-form.html
+++ b/templates/buggy-form.html
@@ -4,7 +4,13 @@
 
 {% block content %}
 
-<h1>Edit Your Buggy #{{ buggy['id'] }}</h1>
+<h1>
+    {% if buggy %}
+        Edit Your Buggy #{{ buggy['id'] }}
+    {% else %}
+        Make Your Buggy
+        {% endif %}
+</h1>
 
 <p>
 {{ msg }}
