delete button added

--- a/templates/buggy.html
+++ b/templates/buggy.html
@@ -97,6 +97,10 @@
    
   </table>
 
+<form method="POST" action="/delete/<buggy_id>">
+    <button type="submit">Delete Buggy</button>
+</form>
+
 {% endfor %}
 
   <p>
