--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
     <a href="/new" class="button">Make Your Buggy</a>
     <a href="/buggy" class="button">Show Your Buggies</a>
     <a href="/json" class="button">Get Your Buggy (JSON)</a>
+    <a href="/poster" class="button">View My Poster</a>
   </div>
 
   <p>
